--- a/displaytabs/tabs/common/GovernmentCashierProfile.html
+++ b/displaytabs/tabs/common/GovernmentCashierProfile.html
@@ -6,63 +6,50 @@
     </div>
     <!-- /.box-header -->
     <div class="box-body">
-        <div style="display: flex; flex-wrap: wrap;">
-            <div class="form-group" style="flex: 50%; margin-left: 15px;">
+        <div style="display: flex;">
+            <div style="flex: 45%">
+                <div style="display: flex; flex-wrap: wrap;">
+                    <div class="form-group" style="flex: 15%; margin-left: 15px;">
+                        <label>Cashier</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="cashierTaker" disabled="">
+                    </div>
+                    <div class="form-group" style="flex: 15%; margin-left: 15px;">
+                        <label>Date</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="queueDate" disabled="">
+                    </div>
+                    <div class="form-group" style="flex: 15%; margin-left: 15px;">
+                        <label>Queue Number</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="queueNumber" disabled="">
+                    </div>
+                </div>
+                <div style="display: flex; flex-wrap: wrap;">
+                    <div class="form-group" style="flex: 100%; margin-left: 15px;">
+                        <label>Title</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="title" disabled="">
+                    </div>
+                    <div class="form-group" style="flex: 30%; margin-left: 15px;">
+                        <label>Invoiced Number</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="invoiceNumber" disabled="">
+                    </div>
+                    <div class="form-group" style="flex: 30%; margin-left: 15px;">
+                        <label>Issuer</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="issuerName" disabled="">
+                    </div>
+                    <div class="form-group" style="flex: 30%; margin-left: 15px;">
+                        <label>Total Amount</label>
+                        <input type="text" class="form-control" module="GovernmentCashierUI" name="totalAmount" disabled="">
+                    </div>
+                </div>
             </div>
-            <div class="form-group" style="flex: 15%; margin-left: 15px;">
-                <label>Cashier</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="cashierTakerCode" disabled="">
-            </div>
-            <div class="form-group" style="flex: 15%; margin-left: 15px;">
-                <label>Date</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="queueDate" disabled="">
-            </div>
-            <div class="form-group" style="flex: 15%; margin-left: 15px;">
-                <label>Queue Number</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="queueNumber" disabled="">
+            <div style="flex: 55%; margin-left: 15px;">
+                <iframe class="customReportViewerFrame" style="width: 100%; height:470px;" report="CashierInvoiceReport" webkitAllowFullScreen mozAllowFullScreen allowfullscreen></iframe>
             </div>
         </div>
-        <div style="display: flex; flex-wrap: wrap;">
-            <div class="form-group" style="flex: 100%; margin-left: 15px;">
-                <label>Title</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="title" disabled="">
-            </div>
-            <div class="form-group" style="flex: 30%; margin-left: 15px;">
-                <label>Invoiced Number</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="invoiceNumber" disabled="">
-            </div>
-            <div class="form-group" style="flex: 30%; margin-left: 15px;">
-                <label>Issuer</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="issuerName" disabled="">
-            </div>
-            <div class="form-group" style="flex: 30%; margin-left: 15px;">
-                <label>Total Amount</label>
-                <input type="text" class="form-control" module="GovernmentCashierUI" name="totalAmount" disabled="">
-            </div>
-        </div>
-        <input type="hidden" class="form-control" module="GovernmentCashierUI" name="recordId" disabled="">
+        <input type="hidden" class="form-control" module="GovernmentCashierUI" name="CashierQueueId" disabled="">
         <input type="hidden" class="form-control" module="GovernmentCashierUI" name="moduleName" disabled="">
     </div>
     <!-- /.box-body -->
-    <div class="box-footer">
-        <button type="button" class="btn btn-default">Cancel</button>
-        <button type="button" class="btn btn-default pull-right btnCashierAcceptPayment" data-toggle="modal" data-target="#GovernmentCashierUI_PrintDialog"><i class="fa fa-money"></i> Accept Payment</button>
-    </div>
-
-    <div class="modal fade in" id="GovernmentCashierUI_PrintDialog" style="display: none; padding-right: 3px;">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                    <h3 class="modal-title">Print Receipt</h3>
-                </div>
-                <div class="modal-body">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary btnCashierPrintReceipt">Print Receipt</button>
-                </div>
-            </div>
-        </div>
+    <div class="box-footer text-center">
+        <button type="button" class="btn btn-default btnCashierAcceptPayment"><i class="fa fa-money"></i> Accept Payment</button>
     </div>
 </div>
