--- a/home.html
+++ b/home.html
@@ -392,6 +392,7 @@
   <script src="js/modules/submodules/GovernmentCashierUI.js"></script>
   <script src="js/modules/submodules/GovernmentAccountingUI.js"></script>
   <script src="js/modules/submodules/GovernmentReportsUI.js"></script>
+  <script src="js/modules/submodules/GovernmentPrintingUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
