In Progress - Government 360 - Reports

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -23,9 +23,6 @@
                         <a href="#GovernmentPrinting" data-toggle="tab" aria-expanded="false">Printing</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#GovernmentAccounting" data-toggle="tab" aria-expanded="false">Accounting</a>
-                    </li>
-                    <li class="tab-pane">
                         <a href="#GovernmentReports" data-toggle="tab" aria-expanded="false">Reports</a>
                     </li>
                 </ul>
@@ -118,23 +115,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="GovernmentAccounting">
-                        <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentAccounting" tabUrl="CitizenProfile"></div>
-                            </div>
-                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentAccounting" tabUrl="SearchCitizen"></div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="tab-pane" id="GovernmentReports">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentReports" tabUrl="CitizenProfile"></div>
-                            </div>
-                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentReports" tabUrl="SearchCitizen"></div>
+                            <div style="flex: 100%; margin: 15px 0px;">
+                                <div class="DisplayTab" tabName="GovernmentReports" tabUrl="GovernmentReport"></div>
                             </div>
                         </div>
                     </div>
