In Progress - Government 360

--- a/displaytabs/tabs/PayrollScheduleUI/UpdatePayroll.html
+++ b/displaytabs/tabs/PayrollScheduleUI/UpdatePayroll.html
@@ -57,7 +57,7 @@
                                     <!-- /.box-header -->
                                     <div class="box-body">
                                         <form role="form">
-                                            <input type="text" class="form-control editEmployeePayrollDetail" module="EmployeePayrollUI" name="employeePayrollId">
+                                            <input type="hidden" class="form-control editEmployeePayrollDetail" module="EmployeePayrollUI" name="employeePayrollId">
                                             <div style="display: flex;">
                                                 <div class="form-group" style="flex: 30%; margin-left: 15px;">
                                                     <label>Basic Pay</label>
