--- a/displaytabs/tabs/common/CommunityTaxCertificateProfile.html
+++ b/displaytabs/tabs/common/CommunityTaxCertificateProfile.html
@@ -10,6 +10,7 @@
     <!-- /.box-header -->
     <div class="box-body">
         <form role="form">
+            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="CommunityTaxCertificateId" disabled="">
             <div style="display: flex; flex-wrap: wrap;">
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>CTC Number</label>
